--- a/Analytics/2-Transform_data.ipynb
+++ b/Analytics/2-Transform_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will prepare the data, transforming ',' decimal to '.', M to Million(10⁶) and the getting the dummies variables news, for this last one we will use a forward fill, that will keep the values through the dates until the another scenarios appears."
+    "In this notebook we will prepare the data, transforming ',' decimal to '.', M to Million(10⁶) and the obtaining the dummies variables news, for this last one we will use a forward fill, that will keep the values through the dates until the another scenarios appears."
    ]
   },
   {
