Glove Embedding source added (NILC)

--- a/Analytics/RNN News Classifier model/RNN_News_classifier.ipynb
+++ b/Analytics/RNN News Classifier model/RNN_News_classifier.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Glove Embedding used in this RNN is found in NILC - Núcleo Interinstitucional de Linguística Computacional\n",
+    "http://www.nilc.icmc.usp.br/embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
