readme and intro of models comparison added

--- a/Analytics/4-Models_comparison.ipynb
+++ b/Analytics/4-Models_comparison.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you arrived here, it means that you are really interested in the forecasting models, but unfortunately I will not explain it in detail, so I will leave some interesting links below that helped me a lot. \n",
+    "The propose of this notebook is identify what regression model is the best for our use case. We'll compare the regression models, such as Linear Regression, Ridge Regression, Sarimax and Deep Learning LSTM Model.\n",
+    "\n",
+    "If you arrived here, it means that you are really interested in the forecasting models, but unfortunately I will not explain it in detail, so I will leave some interesting links below that helped me a lot.\n",
     "\n",
     "https://medium.com/datadriveninvestor/warm-up-in-regression-analysis-ed330cf08a6e\n",
     "\n",
@@ -21,10 +23,10 @@
     "\n",
     "https://towardsdatascience.com/regression-an-explanation-of-regression-metrics-and-what-can-go-wrong-a39a9793d914#:~:text=Root%20Mean%20Squared%20Error%3A%20RMSE,value%20predicted%20by%20the%20model.&text=Mean%20Absolute%20Error%3A%20MAE%20is,value%20predicted%20by%20the%20model.\n",
     "\n",
-    "At the request of the advanced data science capstone course, the version of each model was created with and without PCA, so to facilitate the creation of the same and not waste a lot of time with it, I used a pipeline on all scikitlearn lib models.\n",
+    "At the request of the advanced data science capstone course, the version of each model was created with and without PCA, so to facilitate the creation of the same and not waste a lot of time with it, I used a pipeline on all scikitlearn models.\n",
     "\n",
     "\n",
-    "Due to the objective of the model to fully hit the closing value of the stock, I chose to use the r² and the rmse. Where the r² is the coefficient of determination and it's proportion of the variance in the dependent variable, so the closer to 1 more is the forecast get closer of the real value. The RMSE is the root mean squared error, thus it's get the difference between the real value and the predict value of whole test set.\n",
+    "Due to the objective of the model to fully hit the closing value of the stock, I chose to use the r² and the rmse metrics. Where the r² is the coefficient of determination and it's proportion of the variance in the dependent variable, so the closer to 1 more is the forecast get closer of the real value. The RMSE is the root mean squared error, thus it's get the difference between the real value and the predict value of whole test set.\n",
     "\n",
     "The train_test_split used is 0.8 and 0.2.\n",
     "\n"
