--- a/Analytics/RNN News Classifier model/RNN_News_classifier.ipynb
+++ b/Analytics/RNN News Classifier model/RNN_News_classifier.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Recurrent Neural Network - RNN\n",
+    "\n",
+    "In order to classify the news in different scenarios, it was necessary to create a deep learning model so that we could automatically interpret, in the ETL stage, what each news item on the infomoney wanted to say.\n",
+    "\n",
+    "So it was necessary to create a data set that would feed the model, so I put my little knowlege of the financial market into action, after a failed attempt to use IBM Sentiment Analysis that classified everything as neutral (due to the writers' care not to express an opinion), and I classified 54 Itaú news in 3 scenarious and split it into train, test and dev dataset.\n",
+    "\n",
+    "The most famous model of deep learning nlp classifier is the Recurrent Neural Network, in my internship I had been trying different kind of NN models to classifier using the Glove as Embedding, where the RNN was with the best answers.\n",
+    "\n",
+    "There are a lot embedding ways to transform word to vectors, so i chose it due my familiarity to tunning this kind of model.\n",
+    "\n",
+    "\n",
     "The Glove Embedding used in this RNN is found in NILC - Núcleo Interinstitucional de Linguística Computacional\n",
     "http://www.nilc.icmc.usp.br/embeddings"
    ]
@@ -57,6 +68,14 @@
     "MAX_NB_WORDS = 20000 # Vocabulary size\n",
     "EMBEDDING_DIM = 50 # Dimensions of Glove word embedding \n",
     "VALIDATION_SPLIT = 0.3   # % test dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-processing Functions\n",
+    "One of the most important stage is pre-processing the text that will be classify, it's important we apply the same steps to train and test the model, how it will classify portugues news, I applied removing accentuation and the others commun steps such as remove punction, remove numbers, remove stopwords and lower case."
    ]
   },
   {
@@ -232,6 +251,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Balancing the dataset\n",
+    "\n",
+    "I balanced the scenarios of the train and test dataset, so I'm using 34 Itaú's news in this stage and 19 in the test dataset, but it will a little far from the ideal because I needed 11 Neutral(NN) news, so I chose to leave it in train dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -338,6 +366,13 @@
    "metadata": {},
    "source": [
     "## Pre-processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here it will apply all the pre-processing function that was explained above."
    ]
   },
   {
@@ -541,12 +576,41 @@
     "i = len(word_index) + 1\n",
     "j = EMBEDDING_DIM\n",
     "num_words = min(MAX_NB_WORDS, len(word_index))\n",
-    "embedding_matrix = np.random.randn(i, j)*np.sqrt(2/(49))\n",
+    "embedding_matrix = np.random.randn(i, j)*np.sqrt(2/(49))   ## I will use relu in first hidden layers, so it is recommended to use this multiplier in the random initialize\n",
     "for word, i in word_index.items():\n",
     "    embedding_vector = embeddings_index.get(word)\n",
     "    if embedding_vector is not None:\n",
     "        # words not found in embedding (glove) index will be all-zeros.\n",
     "        embedding_matrix[i] = embedding_vector[0:50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating the Sequential model\n",
+    "\n",
+    "In this RNN model I create it abusing of the regularizations, to each perceptron of activation function I put a regulation in sequence, so the configuration is:  \n",
+    "\n",
+    "1 - Activation function Relu;  \n",
+    "2 - Regularization L1 to remove the features less important;  \n",
+    "3 - Activation function bidirectional Long Short Term Memory(LSTM) with recurrent dropout of 0.1;  \n",
+    "4 - Regularization Dropout of 0.3(keep-probability), it's necessary to cut off randomly the perceptron, the goal is in each iteration run a different model;  \n",
+    "5 - Activation function LSTM;  \n",
+    "6 - Activation function Relu;  \n",
+    "7 - Regularization Dropout of 0.3(keep-probability);  \n",
+    "8 - And the output layer of multi-class classification needs to be a **softmax**;  \n",
+    "\n",
+    "I will leave a reference for more details:  \n",
+    "\n",
+    "Multi-class classification: https://towardsdatascience.com/multi-label-image-classification-with-neural-network-keras-ddc1ab1afede  \n",
+    "\n",
+    "Regularization Droput: https://medium.com/@amarbudhiraja/https-medium-com-amarbudhiraja-learning-less-to-learn-better-dropout-in-deep-machine-learning-74334da4bfc5  \n",
+    "\n",
+    "Regularization L1 and L2: https://towardsdatascience.com/l1-and-l2-regularization-methods-ce25e7fc831c  \n",
+    "\n",
+    "Activation Functions: https://medium.com/the-theory-of-everything/understanding-activation-functions-in-neural-networks-9491262884e0  \n",
+    "\n"
    ]
   },
   {
@@ -608,6 +672,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimization - Gradient Descent\n",
+    "In the cell below will be defined the optmization method to reduce the cost function, It measure how well the algorithm is going, so despite of it is one line, it's very important and a **priority**. \n",
+    "\n",
+    "The goal is minimize the cost function, reducing the model's error, trying differents Weights and Bias parameters, so it will find the Learning rate that best converges to the minimum local (or minimum global in the best case).\n",
+    "\n",
+    "There are 3 most famaous kinds of Gradient Descent: Momentum, RMSprop and ADAM\n",
+    "\n",
+    "I prefer chose the ADAM (Adaptive Moment Optimization) that combines the RMSprop+Momentum, where it was the best to my model, but it can change in different models/projects. In below I will leave a link with the 3 kinds GD comparation, where the best was the Momentum.\n",
+    "\n",
+    "https://blog.paperspace.com/intro-to-optimization-momentum-rmsprop-adam/#:~:text=So%20far%2C%20we've%20seen,Here%20are%20the%20update%20equations.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -626,7 +707,12 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -903,6 +989,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despite the explosion of loss through the amount of epochs, with this optimization was that obtained the best F1-score in the test and dev set.\n",
+    "I had been try the SGD, RMSprop, Adadelta and Nadam and my F1-score dropped to 0.2 and get a vicious model to classify everything as a positive scenarios.\n",
+    "\n",
+    "The keras documentation for the available optimizers: https://keras.io/api/optimizers/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1069,7 +1165,12 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1358,6 +1459,17 @@
     "from sklearn.metrics import f1_score\n",
     "prec1 = f1_score(df_test['Class'], df_test['RNN_Class'], average='weighted')\n",
     "prec1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In spite of the model has a consider loss and low accuracy, the F1-score is acceptable using F1-score Weighted (0.65 out of 1) in the last test, the model nailed it the biggest news from Itaú in this year, where itaú donated 1 Billion to combat the covid-19 pandemic (row number 18), that was the biggest donation in the history of Brazil.\n",
+    "\n",
+    "There's a lot of test to do, and If I need to tune more this model I will start adding more data (hahaha) and after applying the bias-variance method again."
    ]
   }
  ],
